# 21sh-42sh

./: .comment_state  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  auteur  example_exec_guid.c
.github/: PULL_REQUEST_TEMPLATE.md
SIGNALS/: Makefile
includes/: main.h  test.h
includes/ast/: ast.h
includes/autocomplete/: autocomplete.h
includes/automaton/: automaton.h
includes/btree/: ft_btree.h
includes/builtins/: builtin_chdir.h  builtin_echo.h  builtin_env.h  builtin_exit.h  builtin_help.h  builtin_history.h  builtin_local_var.h  builtin_pwd.h  builtin_utils.h  builtins_utils.h  chdir.h  echo.h  exit.h  help.h  pwd.h
includes/core/: .main.h.swp  check_path.h  color.h  command.h  data.h  deinit.h  environ.h  help.h  init.h  input.h  macro_compil.h  main.h  parsing_command.h  progname.h  prompt.h  return.h  select.h  sh_get_input.h  sh_get_line.h  sh_loop.h  tcaps.h
includes/environ/: builtin_env.h  builtin_env_utils.h  env_list_utils.h  env_utils.h  environ.h  getter_env.h  modif_env.h
includes/exec/: check_path.h  exec.h
includes/expand/: expand.h
includes/ft_secu_malloc/: ft_secu_malloc.h
includes/history/: history.h  history_list_utils.h
includes/lexer/: lexer.h
includes/parser/: enum.h  grammar.h  parser.h  parser_grammar.h
includes/secure_memory/: ft_secu_malloc.h  secure_memory.h
includes/signals/: signals.h
includes/tests/: ast_tests.h  exec_tests.h  expand_tests.h  lexer_tests.h  malloc_tests.h  parser_tests.h  sh_tests.h  test.h
includes/tools/: tools.h
libbtree/: Makefile  main.c
libbtree/sources/: btree_apply_infix.c  btree_apply_prefix.c  btree_apply_suffix.c  btree_create_node.c  btree_destroy.c  btree_insert_data.c  btree_level_count.c  btree_print.c  btree_search_item.c
scripts/: DCG.sh  NCG.sh
srcs/: main.c
srcs/ast/: ast.c  ast_built.c  ast_built_greatand.c  ast_built_wr.c  ast_cmp.c  ast_is_greatand.c  ast_is_redir.c  ast_utils.c
srcs/autocomplete/: autoc_display.c  autoc_get_binaries.c  autoc_get_dir_content.c  autocomplete.c  autocomplete_array_handler.c  autocomplete_display.c  autocomplete_display_cols.c  autocomplete_get_bin.c  autocomplete_get_path.c  autocomplete_get_words.c  autocomplete_is.c  autocomplete_sort.c  autocomplete_utils.c  display.c  get_path.c  get_words.c  is.c
srcs/automaton/: automaton.c
srcs/btree/: btree_apply.c  btree_apply_infix.c  btree_apply_prefix.c  btree_apply_suffix.c  btree_create_node.c  btree_destroy.c  btree_insert_data.c  btree_level_count.c  btree_print.c  btree_search_item.c  btree_utils.c
srcs/builtins/: builtin_chdir.c  builtin_chdir_abs.c  builtin_chdir_expand.c  builtin_echo.c  builtin_environ.c  builtin_environ_env.c  builtin_environ_env_exec.c  builtin_environ_env_i.c  builtin_environ_env_u.c  builtin_exit.c  builtin_help.c  builtin_help_2.c  builtin_help_3.c  builtin_help_4.c  builtin_history.c  builtin_history_a.c  builtin_history_acdws.c  builtin_history_npr.c  builtin_history_print.c  builtin_local_var.c  builtin_pwd.c  builtin_utils.c  builtin_utils2.c  builtins_utils.c  builtins_utils2.c  chdir.c  echo.c  exit.c  help.c  pwd.c
srcs/core/: check_path.c  command.c  deinit.c  environ.c  help.c  init.c  input.c  input_draw.c  input_get.c  input_move.c  input_utils.c  input_utils_2.c  input_windows.c  main.c  parsing_command.c  prompt.c  sh_get_char.c  sh_get_input.c  sh_get_line.c  sh_loop.c  sh_option.c  usage_help.c
srcs/environ/: builtin_env_utils.c  builtin_environ.c  env_list_utils.c  env_utils.c  environ.c  getter_env.c  modif_env.c
srcs/exec/: check_path.c  exec_tlist.c  manage.c  sh_exec.c  sh_exec_backup_fd.c  sh_exec_builtin.c  sh_exec_list_fd.c  sh_exec_local_var.c  sh_exec_pipe.c  sh_exec_redir.c  sh_exec_redir2.c  sh_exec_redir3.c  sh_fork.c  sh_heradoc.c  sh_heredoc_input.c  sh_open.c  sh_pipe.c  sh_process_exec.c
srcs/expand/: expand.c  expand_bquote.c  expand_dol.c  expand_history.c  expand_history_replace.c  expand_history_tools.c  expand_merge.c  expand_print.c  expand_quote.c  expand_utils.c  ft_replace.c
srcs/ft_secu_malloc/: ft_secu_free.c  ft_secu_free_all.c  ft_secu_free_lvl.c  ft_secu_malloc.c  ft_secu_malloc_get.c  ft_secu_malloc_lvl.c
srcs/history/: history.c  history_arrow.c  history_getter.c  history_getter_2.c  history_init.c  history_input_utils.c  history_list_utils.c  history_print.c  history_research.c  history_research_start_end.c
srcs/lexer/: lexer.c  lexer_clean.c  lexer_init.c  lexer_utils.c
srcs/parser/: TODO  parser.c  parser_grammar.c  parser_grammar.h  parser_grammar.yacc  parser_grammar_2.c  parser_grammar_3.c  parser_grammar_4.c  parser_grammar_5.c  parser_grammar_cmd.c  parser_grammar_io.c  parser_grammar_newline.c  parser_grammar_pipe.c  parser_grammar_sep_if.c  parser_new.c
srcs/secure_memory/: ft_secu_free.c  ft_secu_free_all.c  ft_secu_free_lvl.c  ft_secu_malloc.c  ft_secu_malloc_get.c  ft_secu_malloc_lvl.c  ft_str_insert_secu.c  ft_strdblfree.c  ft_strdup_secu.c  ft_strjoincl_secu.c  ft_strnew_secu.c  ft_strsplit_secu.c  ft_strsub_secu.c  string_dup_secu.c  string_growth_secu.c  string_insert_secu.c  string_secu.c
srcs/select/: select.c  select_data.c  select_display.c  select_display_init.c  select_display_utils.c  select_exit.c  select_init.c  select_list_utils.c  select_list_utils_2.c
srcs/signals/: get_pid_childs.c  signal_restore.c  signals.c  signals_handler.c
srcs/tcaps/: clean_term.c  get_curs_x.c  get_curs_y.c  tcaps_exec_alt_arrows.c  tcaps_exec_alt_c.c  tcaps_exec_alt_input.c  tcaps_exec_alt_v.c  tcaps_exec_arrow.c  tcaps_exec_arrow_normal.c  tcaps_exec_arrow_select.c  tcaps_exec_backspace.c  tcaps_exec_ctrl_1.c  tcaps_exec_ctrl_2.c  tcaps_exec_ctrl_arrows.c  tcaps_exec_ctrl_select.c  tcaps_exec_delete.c  tcaps_exec_end_home.c  tcaps_exec_escape.c  tcaps_exec_escape_enter.c  tcaps_exec_init.c  tcaps_exec_insert.c  tcaps_exec_select.c  tcaps_exec_tab.c  tcaps_key_exec.c  tcaps_redraw_line.c
srcs/term/: term_modes.c
srcs/tests/: ast_tests.c  env.c  env_tests.c  exec_tests.c  expand_tests.c  (+4 more)
tests/: README.md  test.sh  tests.sh
(+86 files in other folders)
